Reduce HTTP server memory pressure
